syntax = "proto3";

package auth;

option go_package = "library-api-user/proto/auth";

service AuthService {
  rpc ValidateToken(ValidateRequest) returns (ValidateResponse);
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  bool success = 1;
  uint64 auth_id = 2;
  string role = 3;
}